# gitm

./: .eslintrc.json  .gitignore  .npmignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  build.bun.ts  bunfig.toml  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: code-quality.yml  publish.yml  pull-request-validation.yml  release.yml
native/: Cargo.toml  package.json
native/src/: lib.rs
src/: cli.ts
src/commands/: add.ts  auth.ts  clone.ts  init.ts  list.ts  provider.ts  remove.ts  status.ts  use.ts  verify.ts
src/config/: constants.ts  version.ts
src/lib/: config.ts
src/types/: index.ts
src/utils/: auth-state.ts  cli.ts  git.ts  imports.ts  lazy-imports.ts  providers.ts  shell.ts  ssh-native.ts  ssh.ts  system.ts
test/: README.md  setup.ts
test/helpers/: index.ts
test/unit/utils/: cli.test.ts  file-permissions.test.ts  git.test.ts  privacy.test.ts  providers.test.ts  shell.test.ts  ssh-fingerprint.test.ts
