[package]
name = "gitm-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6", "async"] }
napi-derive = "2"
ssh2 = "0.9"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1